@@ -17,7 +17,6 @@ import static com.github.tomakehurst.wiremock.client.WireMock.aResponse;
 import static com.github.tomakehurst.wiremock.client.WireMock.get;
 import static com.github.tomakehurst.wiremock.client.WireMock.urlPathEqualTo;
 import static com.github.tomakehurst.wiremock.core.WireMockConfiguration.options;
-import static java.util.stream.Collectors.toList;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertTrue;
 
@@ -160,7 +159,7 @@ public class ApplicationMetricsRetrieverTest {
     private MetricsNodesConfig nodesConfig(String... paths) {
         var nodes = Arrays.stream(paths)
                 .map(this::nodeConfig)
-                .collect(toList());
+                .toList();
         return new MetricsNodesConfig.Builder()
                 .node(nodes)
                 .build();
